update status order
